--- a/TestGame/CMakeLists.txt
+++ b/TestGame/CMakeLists.txt
@@ -20,6 +20,10 @@ set_target_properties(TestGame PROPERTIES
     CXX_STANDARD_REQUIRED TRUE
 )
 
+target_compile_options(TestGame PRIVATE
+    $<$<CXX_COMPILER_ID:Clang>: -fexperimental-library>
+)
+
 if(NOT TCOB_BUILD_SHARED)
     target_link_libraries(TestGame PRIVATE tcob_static)
 else()
