--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     AND TCOB_ENABLE_ADDON_SCRIPTING_LUA
     AND TCOB_ENABLE_ADDON_GFX_LITEHTML)
     add_subdirectory(TestGame)
+    add_subdirectory(TextEx)
     add_subdirectory(UIEx)
 
     if(EMSCRIPTEN)
