moved PhysicsEx to own exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     AND TCOB_ENABLE_ADDON_SCRIPTING_LUA
     AND TCOB_ENABLE_ADDON_GFX_LITEHTML)
     add_subdirectory(TestGame)
+
+    add_subdirectory(PhysicsEx)
     add_subdirectory(TextEx)
     add_subdirectory(UIEx)
 
