moved ControllerEx to own exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     AND TCOB_ENABLE_ADDON_GFX_LITEHTML)
     add_subdirectory(TestGame)
 
+    add_subdirectory(ControllerEx)
     add_subdirectory(PhysicsEx)
     add_subdirectory(SoundGeneratorEx)
     add_subdirectory(TextEx)
