--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
 
     add_subdirectory(CanvasEx)
     add_subdirectory(ControllerEx)
+    add_subdirectory(ImageFilterEx)
     add_subdirectory(PhysicsEx)
     add_subdirectory(SoundGeneratorEx)
     add_subdirectory(TextEx)
