--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     add_subdirectory(PhysicsEx)
     add_subdirectory(SoundGeneratorEx)
     add_subdirectory(TextEx)
+    add_subdirectory(TileMapEx)
     add_subdirectory(TweenEx)
     add_subdirectory(UIEx)
 endif()
