--- a/ParticleSystemEx/CMakeLists.txt
+++ b/ParticleSystemEx/CMakeLists.txt
@@ -14,6 +14,8 @@ if(EMSCRIPTEN)
     target_compile_options(ParticleSystemEx PRIVATE -fexperimental-library -pthread)
     configure_file(particlesystemex.zip ${CMAKE_BINARY_DIR}/particlesystemex.zip COPYONLY)
     target_link_options(ParticleSystemEx PRIVATE -sFULL_ES3 -sASSERTIONS -sPTHREAD_POOL_SIZE=8 -sASYNCIFY -pthread --embed-file particlesystemex.zip)
+else()
+    configure_file(particlesystemex.zip ${CMAKE_BINARY_DIR}/../../x64/particlesystemex.zip COPYONLY)
 endif()
 
 if(NOT TCOB_BUILD_SHARED)
@@ -30,5 +32,3 @@ if(TCOB_BUILD_SHARED AND NOT TCOB_IS_CI)
         COMMAND_EXPAND_LISTS
     )
 endif()
-
-configure_file(particlesystemex.zip ${CMAKE_BINARY_DIR}/../../x64/particlesystemex.zip COPYONLY)
