--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     add_subdirectory(LightingSystemEx)
     add_subdirectory(ParticleSystemEx)
     add_subdirectory(PhysicsEx)
+    add_subdirectory(RayEx)
     add_subdirectory(SoundGeneratorEx)
     add_subdirectory(TextEx)
     add_subdirectory(TileMapEx)
