--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ if(TCOB_ENABLE_ADDON_PHYSICS_BOX2D
     add_subdirectory(ParticleSystemEx)
     add_subdirectory(PhysicsEx)
     add_subdirectory(RayEx)
+    add_subdirectory(RngEx)
+    add_subdirectory(SoundFontEx)
     add_subdirectory(SoundGeneratorEx)
     add_subdirectory(TextEx)
     add_subdirectory(TileMapEx)
