--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(RayEx)
 add_subdirectory(RngEx)
 add_subdirectory(SoundFontEx)
 add_subdirectory(SoundGeneratorEx)
+add_subdirectory(StencilEx)
 add_subdirectory(TextEx)
 add_subdirectory(TileMapEx)
 add_subdirectory(TweenEx)
