--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(PathfindingEx)
 add_subdirectory(PointCloudEx)
 add_subdirectory(PhysicsEx)
 add_subdirectory(RayEx)
+add_subdirectory(RaycasterEx)
 add_subdirectory(RngEx)
 add_subdirectory(SoundFontEx)
 add_subdirectory(SoundGeneratorEx)
