--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(HtmlEx)
 add_subdirectory(ImageFilterEx)
 add_subdirectory(LightingSystemEx)
 add_subdirectory(LSystemEx)
+add_subdirectory(MusicEx)
 add_subdirectory(ParticleSystemEx)
 add_subdirectory(PathfindingEx)
 add_subdirectory(PointCloudEx)
