uiex: add gradient theme

--- a/UIEx/CMakeLists.txt
+++ b/UIEx/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(UIEx PRIVATE
     main.cpp
     UIEx.cpp
     ExStyle_Color.cpp
+    ExStyle_Gradient.cpp
     ExStyle_Skin.cpp
     ExForms.cpp
 )
